force-app/main/default/objects/Opportunity/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <description
  >Primary product sold. Falls back to the primary opportunity line item when blank.</description>
    <label>Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>