force-app/main/default/objects/Opportunity/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description
  >Subscription created from this opportunity when it reached Closed Won.</description>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Source Opportunities</relationshipLabel>
    <relationshipName>Source_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>