force-app/main/default/objects/Opportunity/fields/Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Term_Months__c</fullName>
    <description
  >Contract term in months, used to derive the subscription end date and MRR.</description>
    <label>Term (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>